	There is a new default filter, "subarch", in
	available.packages() to make use of this.


C-LEVEL FACILITIES

    o	lang5() and lang6() {in addition to pre-existing lang[1-4]()}
	convenience functions for easier construction of eval() calls.
	If you have your own definition, do wrap it inside
	'#ifndef lang5 .... #endif' to keep it working with old and new R.


INSTALLATION

    o	A C99 compiler is now required, and more C99 language features
	will be used in the R sources.

    o	Tcl/Tk >= 8.4 is now required (increased from 8.3).

    o	The output of the examples from several of the base packages
	is now compared to reference output rather than the previous
	output (if any).

    o	zlib has been updated to 1.2.4: this is also the minimum
	version required for --with-system-zlib.


BUG FIXES

    o	Calls to selectMethod() by default no longer cache inherited
	methods.  This could previously corrupt methods used by as().

    o	The densities of non-central chi-squared are now more accurate
	in some cases in the extreme tails, e.g. dchisq(2000, 2,
	1000), as a series expansion was truncated too early.
	(PR#14105)

    o	pt() is more accurate in the left tail for ncp large, e.g.
	pt(-1000, 3, 200).  (PR#14069)

    o	The default C code (R_binary) for binary ops now sets the S4
	bit in the result if either argument is an S4 object. (PR#13209)

    o	source(echo=TRUE) failed to echo comments that followed the
    	last statement in a file.




	**************************************************
	*						 *
	*	       2.11 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.11.0 patched


BUG FIXES

    o	The C function mkCharLenCE now no longer reads past 'len' bytes
	(unlikely to be a problem except in user code). (PR#14246)

    o	On systems without any default LD_LIBRARY_PATH (not even
	/usr/local/lib), [DY]LIB_LIBRARY_PATH is now set without a
	trailing colon.	 (PR#13637)
